--- a/Azurelogin.yml
+++ b/Azurelogin.yml
@@ -11,14 +11,14 @@ jobs:
 
     steps:
     - name: Azure Login
-      uses: azure/login@v1
+      uses: actions/setup-java@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: <app-name>
-        slot-name: <slot-name>
+        app-name: 'githubapp1'
+        slot-name: 'Production'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
         package: .
